Add tests v8